# ToyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Documentation/: CommonRenderFramework_Shader.md
Documentation/CodeTemplate/: EngineModule.example.h
Documentation/CommonRenderFramework/ToyShader/: install.bat  toy_shader_parser.c  toy_shader_parser.h  toy_shader_parser.y
Example/: CMakeLists.txt
Example/Empty/: CMakeLists.txt  Main.cpp
Example/RenderingExample/: CMakeLists.txt  Main.cpp
Include/ToyEngine/Debug/: Assert.h  DebugModule.h  Logger.h
Include/ToyEngine/Engine/: Engine.h  EngineEventId.h  EngineModule.h  EngineParam.h
Include/ToyEngine/Graphics/: Material.h  RendererManager.h  Shader.h  Texture2D.h
Include/ToyEngine/Graphics/RenderBeast/: RenderBeast.h
Include/ToyEngine/Resource/: RBinary.h  RDirectory.h  RMaterial.h  RScene.h  RShader.h  RText.h  RTexture2D.h  Resource.h  ResourceHandle.h  ResourceLibrary.h  ResourceManager.h  ResourcePath.h  ResourceSource.h
Include/ToyEngine/Resource/FileSystemResourceSource/: FileSystemCachedInfo.h  FileSystemResourceFactory.h  FileSystemResourceLoader.h  FileSystemResourceSource.h  FileSystemResourceUnloader.h
Include/ToyEngine/Scene/: ComponentBase.h  ComponentManagerHelper.h  IComponent.h  IComponentManager.h  Scene.h  SceneManager.h  SceneObject.h  SceneObjectManager.h
Include/ToyEngine/Scene/Components/: CBlocks.h  CBlocksRender.h  CCamera.h  CMeshFilter.h  CMeshRenderer.h  CTransform.h
Source/: CMakeLists.txt  CMakeSources.cmake  ToyEngineConfig.h.in
Source/ToyEngine/Engine/: Engine.cpp
Source/ToyEngine/Graphics/: Material.cpp  Shader.cpp
Source/ToyEngine/Graphics/RenderBeast/: RenderBeast.cpp
Source/ToyEngine/Resource/: RBinary.cpp  RDirectory.cpp  RMaterial.cpp  RShader.cpp  RText.cpp  RTexture2D.cpp  Resource.cpp  ResourceHandle.cpp  ResourceLibrary.cpp  ResourcePath.cpp
Source/ToyEngine/Resource/FileSystemResourceSource/: FileSystemCachedInfo.cpp  FileSystemResourceFactory.cpp  FileSystemResourceSource.cpp
Source/ToyEngine/Scene/: ComponentManagerHelper.cpp  Scene.cpp  SceneManager.cpp  SceneObject.cpp
Source/ToyEngine/Scene/Components/: CBlocks.cpp  CCamera.cpp  CMeshFilter.cpp  CMeshRenderer.cpp  CTransform.cpp
