# 
# ToyEngine
# 

CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(ToyEngine)

SET(TOY_ENGINE_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/Include)
SET(TOY_ENGINE_SOURCE_DIR ${PROJECT_SOURCE_DIR}/Source)

MESSAGE(STATUS "${PROJECT_NAME} CMake Begin...")

ADD_SUBDIRECTORY(Source)
#ADD_SUBDIRECTORY(Example)

MESSAGE(STATUS "${PROJECT_NAME} CMake End")